--- a/angular-project/src/app/sign/sign.component.html
+++ b/angular-project/src/app/sign/sign.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main id="main">
   <section id="about" class="about">
 <section id="hero" class="clearfix">
@@ -5,40 +6,55 @@
       <div class="row justify-content-center align-self-center" data-aos="fade-up">
 
     <h4>Sign Up </h4>
-    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+    <form >
       <div class="form-group">
-        <input type="text" name="nom" class="form-control" id="nom" [(ngModel)]="nom" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="Nom" required>
+        <input type="text" name="nom" class="form-control" id="nom" [(ngModel)]="utilisateur.nom" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="Nom" required>
       </div>
       <div class="form-group mt-3">
-        <input type="text" class="form-control" name="prenom" id="prenom" [(ngModel)]="prenom" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="prenom" required>
+        <input type="text" class="form-control" name="prenom" id="prenom" [(ngModel)]="utilisateur.prenom" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="prenom" required>
       </div>
       <div class="form-group mt-3">
-        <input type="text" class="form-control" name="role" id="role" [(ngModel)]="role" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="Role" required>
+        <select id="role" name="role" class="form-control"   [(ngModel)]="utilisateur.role" [ngModelOptions]="{standalone: true}"   >
+          <option value="1">Admin</option>
+          <option value="2">Donneur</option>
+          <option value="3">Initiateur</option>
+          <!-- Ajoutez autant d'options que nécessaire -->
+      </select>
       </div>
       <div class="form-group mt-3">
-        <input type="email"   class="form-control" name="email" id="email"  [(ngModel)]="email" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="email" required>
+        <input type="email"   class="form-control" name="email" id="email"  [(ngModel)]="utilisateur.email" [ngModelOptions]="{standalone: true}"  class="form-control" placeholder="email" required>
       </div>
       <div class="form-group mt-3">
-        <input type="password" class="form-control" name="password" id="password"  [(ngModel)]="password" [ngModelOptions]="{standalone: true}"  class="form-control"  placeholder="password" required>
+        <input type="password" class="form-control" name="password" id="password"  [(ngModel)]="utilisateur.password" [ngModelOptions]="{standalone: true}"  class="form-control"  placeholder="password" required>
       </div>
       <div class="form-group mt-3">
-        <label>isarchived</label>
-        <input type="checkbox" class="form-control" name="isarchived" id="isarchived" [(ngModel)]="isarchived" [ngModelOptions]="{standalone: true}"  class="form-control" >
+        <!-- <label>isarchived</label>
+        <input type="checkbox"  name="isarchived" id="isarchived" [(ngModel)]="isarchived" [ngModelOptions]="{standalone: true}" style="zoom:1.4" >
       </div>
       <div class="form-group mt-3">
       <label>isarchived</label>
-        <input type="checkbox" class="form-control" name="isblocked" id="isblocked" [(ngModel)]="isblocked" [ngModelOptions]="{standalone: true}"  class="form-control" >
+     
+       
+   
+        <input type="checkbox"  name="isblocked" id="isblocked" [(ngModel)]="isblocked" [ngModelOptions]="{standalone: true}" style="zoom:1.4"  > -->
       </div>
       <div class="form-group mt-3">
-        <input type="date" class="form-control" name="created_date" id="created_date" placeholder="created_date"   [(ngModel)]="created_date" [ngModelOptions]="{standalone: true}"  class="form-control" required>
+        <input type="date" class="form-control" name="created_date" id="created_date" placeholder="created_date"   [(ngModel)]="utilisateur.date_created" [ngModelOptions]="{standalone: true}"  class="form-control" required>
+      </div>
+      
+      <div class="my-3">
+      
       </div>
       
 
       <div class="text-center"><button type="submit" title="Send Message" class="btn btn-primary btn-lg"
-        style="padding-left: 2.5rem; padding-right: 2.5rem;"  (click)="save()" >Ajouter</button>
+        style="padding-left: 2.5rem; padding-right: 2.5rem;"  (click)="idUtilisateur?update():save()">{{idUtilisateur?'Modifier':'Ajouter'}}</button>
       </div>
     </form>
 
   </div>
 
 </div>
+
+
+
